feat(skill): update PUT endpoint to accept ID via path variable